# routes/index.js
@@ -7,5 +7,6 @@ router.get('/', (req, res) => {
     res.send('Hello World');});
 
 router.use('/users', require('./users'));
+router.use('/products', require('./products'));
 
 module.exports = router;
